# telegram-stats-bot

./: .gitignore  CHANGELOG.rst  Dockerfile  README.rst  db.py  docker-compose.yml  log_storage.py  main.py  parse.py  pyproject.toml  requirements.txt  stats.py
.github/workflows/: docker.yml
telegram_stats_bot/: __init__.py  db.py  json_dump_parser.py  log_storage.py  main.py  parse.py  stats.py  utils.py
tests/: conftest.py  test_db.py  test_stats.py
